# clamshell

./: LICENSE  README.md  __init__.py  clamshell.py  key_bindings.py  prompt.py  pyproject.toml  requirements.txt  utils.py
clam/: __main__.py  shell.py  utils.py
clamshell/: .gitignore  __main__.py  defaults.py  key_bindings.py  meta_functions.py  shell.py  shell_utils.py  types.py  utils.py
